--- a/assets/style.css
+++ b/assets/style.css
@@ -10,18 +10,15 @@ body {
 
 .header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    font-family: 
+    background-color: ;
+    color: ;
 }
 
 .header h1 {
     display: inline-block;
     font-size: 48px;
-}
-
-.header h1 .seo {
-    color: #d9dcd6;
+    color: ;
 }
 
 .header nav {
@@ -44,6 +41,8 @@ body {
 a {
     color: #ffffff;
     text-decoration: none;
+
+}
 
 
 .hero {
