--- a/assets/style.css
+++ b/assets/style.css
@@ -19,8 +19,8 @@ main {
     flex-wrap: wrap;
     padding: 40px;
     margin: 40px;
+    justify-content:space-between;
     border:rgb(225, 161, 52) solid 1px;
-    justify-content: space-between;
     align-items: baseline;
 }
 
@@ -61,6 +61,7 @@ a {
     font-size: 68px;
     width: 600px;
     height: 300px;
+    border:rgb(225, 161, 52) solid 1px;
 }
 
 .about .blurb {
@@ -69,10 +70,6 @@ a {
     font-size: 20px;
     width: 900px;
     border:rgb(225, 161, 52) solid 1px;
-
-}
-
-.about .blurb p {
     padding: 30px 0px 0px 0px;
 }
 
@@ -119,7 +116,7 @@ a {
 @media screen and (max-width: 992px) {
     body {
       flex-direction: column;
-  }
+    }
   }
   
   /* Large smartphones */
@@ -127,6 +124,13 @@ a {
     body {
         flex-direction: column;
     } 
+
+    .heading h1 {
+        display: flex;
+        font-size: 58px;
+        width: 600px;
+        height: 300px;
+    }
 
     .header h1, .contact h1 {
         font-size: 58px;
@@ -143,14 +147,21 @@ a {
     .header nav ul li, .contact nav ul li {
         display: inline;
     }
-   
-  }
+    }
   
   /* Small smartphones */
   @media screen and (max-width: 576px) {
     body {
         flex-direction: column;
     }
+
+    .heading h1 {
+        display: flex;
+        font-size: 48px;
+        width: 600px;
+        height: 300px;
+    }
+
     .header h1, .contact h1 {
         font-size: 48px;
     }
@@ -167,4 +178,4 @@ a {
         display: block;
         text-indent: -75px;
     }
-  }
+    }
