--- a/assets/style.css
+++ b/assets/style.css
@@ -44,12 +44,10 @@ a {
     text-decoration: none;
 }
 
-
 .about, .work {
     display: flex;
-    align-items: top;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-between;
     padding: 40px;
     margin: 40px;
     border:rgb(225, 161, 52) solid 1px;
@@ -63,7 +61,7 @@ a {
     border:rgb(225, 161, 52) solid 1px;
 }
 
-.about .blurb, .projects {
+.about .blurb, .work .project-large {
     display: flex;
     flex-wrap: wrap;
     font-size: 20px;
@@ -71,7 +69,7 @@ a {
     border:rgb(225, 161, 52) solid 1px;
 }
 
-.blurb p {
+.about .blurb p {
     display: flex;
     flex-wrap: wrap;
     text-align: flex-start;
@@ -80,29 +78,29 @@ a {
     border:rgb(225, 161, 52) solid 1px;
 }
 
-.projects header {    
+.work header {    
     padding: 20px;
-    text-align: center;
     border:rgb(225, 161, 52) solid 1px;
 }
 
-.projects .project-large img {
+.work .project-large img {
     width: 100%;
     min-width:50%;
     border:rgb(225, 161, 52) solid 1px;
 }
 
-.projects .project-small img {
+.work .project-small img {
     width: 50%;
     min-width:25%;
+    justify-content: flex-end;
     border:rgb(225, 161, 52) solid 1px;
 }
 
-.projects .project-large img:hover {
+.work .project-large img:hover {
     opacity: 0.7;
 }
 
-.projects .project-small img:hover {
+.work .project-small img:hover {
     opacity: 0.7;
 }
 
@@ -173,4 +171,4 @@ a {
         text-indent: -75px;
     }
 
-    }
+    } 
