--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,6 @@ main {
     padding: 40px;
     margin: 40px;
     justify-content:space-between;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .header h1, .contact h1 {
@@ -50,7 +49,6 @@ a {
     justify-content: space-between;
     padding: 40px;
     margin: 40px;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .heading {
@@ -60,7 +58,6 @@ a {
 .heading h1 {
     font-size: 68px;
     height: 300px;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .about .blurb, .work .projects {
@@ -68,7 +65,6 @@ a {
     flex-wrap: wrap;
     flex: 1 0 50%;
     width: 50%;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .about .blurb p {
@@ -78,28 +74,25 @@ a {
     font-size: 22px;
     line-height: 1.5;
     padding: 40px 0px;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .work .projects header {    
     padding: 20px;
     font-size: 24px;
     text-align: center;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .work .projects .app-large {
     width: 100%;
     min-width:50%;
     transition: width 0.5s linear;
-    border:rgb(225, 161, 52) solid 1px;
 }
 
 .work .projects .app-small {
     flex: 1 0 50%;
     width: 50%;
     min-width:25%;
-    border:rgb(225, 161, 52) solid 1px;
+    padding: 5px;
 }
 
 .work .projects .app-large img:hover {
