--- a/assets/style.css
+++ b/assets/style.css
@@ -16,21 +16,19 @@ main {
 .header, .contact {
     display: flex;
     flex-wrap: wrap;
-    padding: 40px;
-    margin: 40px;
     justify-content:space-between;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .header h1, .contact h1 {
     font-size: 68px;
-    /* padding: 20px; */
-    /* padding: 40px;
-    margin: 40px; */
+    padding: 40px;
+    margin: 40px;
 }
 
 .header nav, .contact nav {
-    padding: 20px;
+    padding: 40px;
+    margin: 40px;
     font-size: 24px;
 }
 
