--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,15 @@ main {
     flex-wrap: wrap;
 }
 
+.links {
+    display: flex;
+    flex-wrap: inline-block;
+    justify-content: space-around;
+    font-size: 20px;
+    align-items: center;
+    padding: 10px;
+}
+
 .header, .contact {
     display: flex;
     flex-wrap: wrap;
@@ -73,13 +82,13 @@ a {
     display: flex;
     flex-wrap: wrap;
     text-align: flex-start;
-    font-size: 22px;
+    font-size: 26px;
     line-height: 1.5;
     padding: 40px 0px;
 }
 
 .work .projects header {    
-    padding: 20px;
+    padding: 30px 10px 5px 10px;
     font-size: 24px;
     text-align: center;
 }
@@ -87,23 +96,26 @@ a {
 .work .projects .app-large {
     width: 100%;
     min-width:50%;
+    font-size: 16px;
     transition: width 0.5s linear;
 }
 
 .work .projects .app-small {
     flex: 1 0 50%;
     width: 50%;
+    justify-content: space-between;
     min-width:25%;
-    padding: 5px;
+    font-size: 16px;
+    padding: 40px 0px 15px 15px;
 }
 
-.work .projects .app-large img:hover {
+/* .work .projects .app-large img:hover {
     opacity: 0.7;
 }
 
 .work .projects .app-small img:hover {
     opacity: 0.7;
-}
+} */
 
 
 /* Large smartphones */
@@ -112,6 +124,15 @@ a {
     main {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    .links {
+        display: flex;
+        flex-wrap: inline-block;
+        justify-content: space-around;
+        font-size:  14px;
+        align-items: center;
+        padding: 8px;
     }
     
     .header, .contact {
@@ -183,7 +204,7 @@ a {
     }
     
     .work .projects header {    
-        padding: 10px;
+        padding: 20px 5px 5px 5px;
         font-size: 14px;
         text-align: center;
     }
@@ -193,21 +214,23 @@ a {
         min-width:50%;
         transition: width 0.5s linear;
     }
-    
+
     .work .projects .app-small {
         flex: 1 0 50%;
         width: 50%;
+        justify-content: space-between;
         min-width:25%;
-        padding: 5px;
+        font-size: 14px;
+        padding: 20px 0px 10px 10px;
     }
     
-    .work .projects .app-large img:hover {
+    /* .work .projects .app-large img:hover {
         opacity: 0.7;
     }
     
     .work .projects .app-small img:hover {
         opacity: 0.7;
-    }
+    } */
 
   }
 
@@ -218,6 +241,15 @@ a {
     main {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    .links {
+        display: flex;
+        flex-wrap: inline-block;
+        justify-content: space-around;
+        font-size:  12px;
+        align-items: center;
+        padding: 5px;
     }
     
     .header, .contact {
@@ -289,7 +321,7 @@ a {
     }
     
     .work .projects header {    
-        padding: 5px;
+        padding: 10px 5px 5px 5px;
         font-size: 10px;
         text-align: center;
     }
@@ -300,20 +332,23 @@ a {
         transition: width 0.5s linear;
     }
     
+
     .work .projects .app-small {
         flex: 1 0 50%;
         width: 50%;
+        justify-content: space-between;
         min-width:25%;
-        padding: 5px;
+        font-size: 12px;
+        padding: 10px 0px 5px 5px;
     }
     
-    .work .projects .app-large img:hover {
+    /* .work .projects .app-large img:hover {
         opacity: 0.7;
     }
     
     .work .projects .app-small img:hover {
         opacity: 0.7;
-    }
+    } */
 
   }
 
